Ajax Delete option

--- a/Views/Home/AllProducts.cshtml
+++ b/Views/Home/AllProducts.cshtml
@@ -56,7 +56,7 @@ else if (ViewBag.EMessage != null)
     <tbody>
         @foreach (var item in Model)
         {
-            <tr>
+            <tr class="parentitem">
                 <td>
                     @Html.DisplayFor(modelItem => item.ProductName)
                 </td>
@@ -88,9 +88,10 @@ else if (ViewBag.EMessage != null)
                         @Html.DisplayFor(modelItem => item.ModifyDate)
                     </td>*@
                 <td>
+                    <input type="number" id="id" value="@item.Id" />
                     <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-info btn-sm">Mofify</a> |
                     <a asp-action="DetailProduct" asp-route-id="@item.Id" class="btn btn-success btn-sm">Detail</a> |
-                    <a asp-action="DeleteProduct" asp-route-id="@item.Id" class="btn btn-danger btn-sm">Remove</a>
+                    <a href="#" data-toggle="#myModal"  class="btn btn-danger btn-sm btndelete">Remove</a>
                 </td>
             </tr>
         }
@@ -100,8 +101,6 @@ else if (ViewBag.EMessage != null)
 <div class="modal fade" id="myModal">
     <div class="modal-dialog">
         <div class="modal-content">
-
-
             <div class="modal-header">
                 <a href="#" class="close" data-dismiss="modal">&times;</a>
                 <h3 class="modal-title">Delete Employee</h3>
@@ -142,31 +141,33 @@ else if (ViewBag.EMessage != null)
 
     <script>
 
-        var ConfirmDelete = function (Id) {
+        //var ConfirmDelete = function (Id) {
 
-            $("#hiddenEmployeeId").val(Id);
-            $("#myModal").modal('show');
+        //    $("#hiddenEmployeeId").val(Id);
+        //    $("#myModal").modal('show');
 
-        }
+        //}
 
-        var DeleteProduct = function () {
-
-            var Id = $("#hiddenEmployeeId").val();
+        
+        $(document).on("click", ".btndelete", function () {
+ 
+            var closestdiv = $(this).closest(".parentitem");
+            var Id = closestdiv.find("#id").val();
 
             $.ajax({
 
-                type: "POST",
+                type: "GET",
                 url: "/Home/DeleteProduct",
                 data: { Id: Id },
                 success: function (result) {
-                    $("#myModal").modal("hide");
-                    $("#row_" + Id).remove();
+                   // $("#myModal").modal("hide");
+                    closestdiv.remove();
 
                 }
 
-            })
+            });
 
-        }
+            });
     </script>
 
 }
